# cheat-sheet

./: .markdownlint.yaml  .pre-commit-config.yaml  README.md
AI/: GPU.md  README.md
Autonomous/: Autoware.md
C/: README.md  common.md  concept.md  header.md
C++/: Advanced.md  Basic.md  Container.md  Exception.md  IO.md  README.md  Smart_Pointer.md  Useful_Techniques.md  atom.md
C++/YAML/: Makefile  README.md  parser.cpp  test.yaml
C++/container/: deque.md  list.md  map.md  pair.md  queue.md  set.md  stack.md  vector.md  vector_algorithm.md
C++/filesystem/: listdir.cpp
C++/string/: README.md
C/UsefulExample/: README.md
Commands/: Autoware.md  Chromecast.md  CleanDisk.md  Console.md  Programming.md  README.md  System.md  Useful_CMD.md  Windows_CMD.md
Development/: Performance.md
Development/Debug/: .gitignore  Makefile  README.md  int_overflow.c  memory_leak.c
Development/OpenSSL/: Makefile  bio_client.c  bio_server.c  client_with_chkcert.c  server_with_chkcert.c  ssl_client.c  ssl_server.c
Development/Performance/: LTTng.md  README.md  environment.md  perf.md  tool.md
Development/cmake/: README.md  syntax.md
Development/cmake/compile_option_example/: CMakeLists.txt  README.md
Development/cmake/multiple_folder/test_dir/: CMakeLists.txt
Development/cmake/simple_example/: CMakeLists.txt  README.md  test.c
Go/: README.md
Go/library_example/: README.md  go.mod
Go/simple_example/: example.go
Linux/: Audio.md  CD.md  GPU.md  PAM.md  Ubuntu.md  apt.md  audio.md  cgroup.md  desktop.md  embeded_linux.md  filesystem.md  io.md  library.md  memory.md  nvidia.md  process.md  qemu.md  serial.md  sudoer  sudoers.md  system_call.md  task.md  tpm.md  usb.md  v4l2.md
Linux/ARM/: README.md
Linux/IPC/: Makefile  README.md  msgq_server.c  pipe.c  shared_memory_first.c  shared_memory_second.c  shm_proc2.c  uds_client.c  uds_server.c
Linux/Synchronization/: Makefile  README.md  RWL_example.c  mutex_spinlock_example.c  sem_example.c
Linux/audio/: audio.md  system.md
Linux/cgroup/: Makefile  README.md  cpu.c
Linux/dbus/: README.md  client.c  server.c
Linux/driver/: README.md  sysfs.md  udev.md
Linux/embedded_linux/: README.md  buildroot.md  compiler.md  kernel.md  rootfs.md  uboot.md  yocto.md
Linux/embeded_linux/: README.md  compiler.md  kernel.md  qemu.md  rootfs.md  uboot.md
Linux/graphic/: desktop.md  graphic.md
Linux/kernel/: README.md
Linux/network/: Makefile  README.md  get_info.c  get_ip.c  get_ssid.c  get_wireless_signal.c
Linux/peripheral/: gpio.md  i2c.md  serial.md  spi.md  tpm.md
Linux/server/: README.md  ftp.md
Linux/shortcut/: README.md  example.desktop  example.sh
Linux/streaming/: gstreamer.md  v4l2.md
Linux/system_info/: Makefile  cpu_usage.c  memory_usage.c
Linux/systemd/: README.md
Linux/task&process/: process.md  task.md  ulimit.md
OpenSSL/: Makefile  README.md  bio_client.c  bio_server.c  client_with_chkcert.c  server_with_chkcert.c  ssl_client.c  ssl_server.c
Python/: README.md  binary.md  collections.md  develop_env.md  file_operation.md  string.md  tarfile.md  tips.md
Python/argument/: argparse_example.py  click_example.py
Python/network/: TCP_client.py  TCP_server.py  UDP_server.py  requests.md
Python/opencv/: README.md  camera.py  readwrite.py  size.py
Python/re/: README.md  search_re.py
Python/serialization/: README.md  json.md  pickle_example.py
Python/shell/: README.md  subprocess_shell.py
Python/thread/: thread_class.py  thread_func.py
Python/unittest/: README.md
Rust/: Basic Knowledge.md  HashMap.md  README.md  Smart_Pointer.md  String.md  Useful_DS.md  Vec.md  file.md  generic.md  iterator.md  lifecycle.md  lifetime.md  module.md  thread.md
Rust/error_example/: Cargo.toml
Rust/macro_example/: Cargo.toml
Rust/smart_ptr_example/: Cargo.toml  README.md
Rust/test_example/: README.md
ShellScript/: README.md
Tools/: Application.md  CLI.md  CleanDisk.md  LaTex.md  Performance.md  README.md  Useful_CMD.md  VPN.md  Windows_CMD.md  ansible.md  docker.md  git.md  github.md  gpg.md  gstreamer.md  sphinx.md  tmuxp.md
Tools/ansible/: README.md  hosts
algorithm/: README.md  resource.md  search.md  sliding_window.md
algorithm/graph/: README.md
algorithm/sort/: README.md
cmake/: README.md  syntax.md
cmake/compile_option_example/: CMakeLists.txt
cmake/compile_option_example/src/: CMakeLists.txt  test.cpp
cmake/multiple_folder/: CMakeLists.txt  README.md  test.c
cmake/multiple_folder/func/: CMakeLists.txt
cmake/multiple_folder/func_dir/: CMakeLists.txt
cmake/multiple_folder/test_dir/: CMakeLists.txt
cmake/package/: CMakeLists.txt  README.md
cmake/simple_example/: CMakeLists.txt  README.md  test.c
cmake/test_install_example/: CMakeLists.txt  README.md  test  test.c
cmake/version_example/: CMakeLists.txt  README.md  main.c
docker/: README.md  docker_buildx.md  docker_management.md  dockerfile.md
javascript/: React.js.md  nodejs.md  typescript.md
languages/C/: README.md  concept.md  header.md
languages/C++/: Advanced.md  Basic.md  IO.md  README.md  bind&function&lambda.md  move&forward.md
languages/C/POSIX example/process&thread/: CMakeLists.txt  Makefile  README.md  fork.c
languages/Java/: README.md
languages/Python/: README.md  develop_env.md  implementation.md  object.md  string.md  yaml.md
languages/Rust/: Basic Knowledge.md  ObjectOriented.md  README.md  Smart_Pointer.md  String.md  Useful_DS.md  Vec.md  async.md  code_coverage.md  debug.md  embeded.md  file.md  implicit_conversion.md  iterator.md  module.md  thread.md
languages/ShellScript/: parse.md
languages/Sui MOVE/: README.md
languages/javascript/: React.js.md  nodejs.md  typescript.md
sort/bubble_sort/: Makefile  bubble_sort.cpp
sort/insertion_sort/: insertion_sort.c  insertion_sort.cpp
sort/merge_sort/: merge_sort.cpp
sort/quick_sort/: Makefile  quick_sort.c  quick_sort.cpp
sort/radix_sort/: Makefile  radix_sort.cpp
sort/selection_sort/: Makefile  selection_sort.c  selection_sort.cpp
virtualization/: kubernetes.md  lxd.md  multipass.md
(+154 files in other folders)
